--- a/source/index.html
+++ b/source/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="page" lang="ru">
+<html class="page no-js" lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -32,17 +32,25 @@
           <span class="main-navigation__toggle-icon"></span>
           <span class="main-navigation__toggle-icon"></span>
         </button>
-        <ul class="main-navigation__list main-navigation__list--index-desktop" id="main-menu" aria-hidden="true">
+        <input class="main-navigation__checkbox" type="checkbox" id="main-menu-toggle" name="main-menu-toggle">
+        <label class="main-navigation__toggle-link" for="main-menu-toggle" aria-label="Открыть главное меню">
+          <span class="main-navigation__toggle-link-icon"></span>
+          <span class="main-navigation__toggle-link-icon"></span>
+          <span class="main-navigation__toggle-link-icon"></span>
+        </label>
+        <ul class="main-navigation__list" id="main-menu" aria-hidden="true">
           <li class="main-navigation__list-item">
-            <a class="main-navigation__link main-navigation__link--current" href="./index.html">Главная</a>
+            <a class="main-navigation__link main-navigation__link--index main-navigation__link--index-current" href="./index.html">Главная</a>
           </li>
           <li class="main-navigation__list-item">
-            <a class="main-navigation__link" href="./catalog.html">Каталог продукции</a>
+            <a class="main-navigation__link  main-navigation__link--index" href="./catalog.html">Каталог продукции</a>
           </li>
           <li class="main-navigation__list-item">
-            <a class="main-navigation__link" href="./form.html">Подбор программы</a>
+            <a class="main-navigation__link main-navigation__link--index" href="./form.html">Подбор программы</a>
           </li>
         </ul>
+        <a class="main-navigation__overlay" href="#" aria-label="Закрыть меню"></a>
+      </nav>
       </nav>
     </div>
   </header>
@@ -53,9 +61,16 @@
         <h2 class="hero__title">Функциональное питание для котов</h2>
         <p class="hero__desc">Занялся собой? Займись котом!</p>
         <picture>
-          <source width="552" height="499" type="image/png" media="(min-width: 1440px)" srcset="./images/index-hero-desktop@1x.png 1x, ./images/index-hero-desktop@2x.png 2x">
-          <source width="709" height="609" type="image/png" media="(min-width: 768px)" srcset="./images/index-hero-tablet@1x.png 1x, ./images/index-hero-tablet@2x.png 2x">
-          <img class="hero__hero-image" src="./images/index-hero-mobile@1x.png" srcset="./images/index-hero-mobile@2x.png 2x" width="280" height="270" alt="Упаковка питания для кошке со вкусом курицы">
+          <source media="(min-width: 1440px)" type="image/webp" srcset="./images/index-hero-desktop@1x.webp 1x, ./images/index-hero-desktop@2x.webp 2x">
+          <source media="(min-width: 1440px)" type="image/png" srcset="./images/index-hero-desktop@1x.png 1x, ./images/index-hero-desktop@2x.png 2x">
+
+          <source media="(min-width: 768px)" type="image/webp" srcset="./images/index-hero-tablet@1x.webp 1x, ./images/index-hero-tablet@2x.webp 2x">
+          <source media="(min-width: 768px)" type="image/png" srcset="./images/index-hero-tablet@1x.png 1x, ./images/index-hero-tablet@2x.png 2x">
+
+          <source type="image/webp" srcset="./images/index-hero-mobile@1x.webp 1x, ./images/index-hero-mobile@2x.webp 2x">
+          <source type="image/png" srcset="./images/index-hero-mobile@1x.png 1x, ./images/index-hero-mobile@2x.png 2x">
+
+          <img class="hero__hero-image" src="./images/index-hero-mobile@1x.png" width="280" height="270" alt="Упаковка питания для кошек со вкусом курицы">
         </picture>
         <a class="hero__nutrition-program" href="./form.html">Подобрать программу</a>
       </div>
@@ -103,12 +118,22 @@
       </div>
       <div class="demonstration">
         <picture>
-          <source width="560" height="512" type="image/png" media="(min-width: 768px)" srcset="./images/cat-before-tablet-desktop@1x.png 1x, ./images/cat-before-tablet-desktop@2x.png 2x">
-          <img class="demonstration__demonstration-image demonstration__demonstration-image--before" src="./images/cat-before-mobile@1x.png" srcset="./images/cat-before-mobile@2x.png 2x" width="280" height="256" alt="Демонстрация изменений">
+          <source media="(min-width: 768px)" type="image/webp" srcset="./images/cat-before-tablet-desktop@1x.webp 1x, ./images/cat-before-tablet-desktop@2x.webp 2x">
+          <source media="(min-width: 768px)" type="image/png" srcset="./images/cat-before-tablet-desktop@1x.png 1x, ./images/cat-before-tablet-desktop@2x.png 2x">
+
+          <source type="image/webp" srcset="./images/cat-before-mobile@1x.webp 1x, ./images/cat-before-mobile@2x.webp 2x">
+          <source type="image/png" srcset="./images/cat-before-mobile@1x.png 1x, ./images/cat-before-mobile@2x.png 2x">
+
+          <img class="demonstration__demonstration-image demonstration__demonstration-image--before" src="./images/cat-before-mobile@1x.png" width="280" height="256" alt="Демонстрация изменений">
         </picture>
         <picture>
-          <source width="560" height="512" type="image/png" media="(min-width: 768px)" srcset="./images/cat-after-tablet-desktop@1x.png 1x, ./images/cat-after-tablet-desktop@2x.png 2x">
-          <img class="demonstration__demonstration-image demonstration__demonstration-image--after" src="./images/cat-after-mobile@1x.png" srcset="./images/cat-after-mobile@2x.png 2x" width="280" height="256" alt="Демонстрация изменений">
+          <source media="(min-width: 768px)" type="image/webp" srcset="./images/cat-after-tablet-desktop@1x.webp 1x, ./images/cat-after-tablet-desktop@2x.webp 2x">
+          <source media="(min-width: 768px)" type="image/png" srcset="./images/cat-after-tablet-desktop@1x.png 1x, ./images/cat-after-tablet-desktop@2x.png 2x">
+
+          <source type="image/webp" srcset="./images/cat-after-mobile@1x.webp 1x, ./images/cat-after-mobile@2x.webp 2x">
+          <source type="image/png" srcset="./images/cat-after-mobile@1x.png 1x, ./images/cat-after-mobile@2x.png 2x">
+
+          <img class="demonstration__demonstration-image demonstration__demonstration-image--after" src="./images/cat-after-mobile@1x.png" width="280" height="256" alt="Демонстрация изменений">
         </picture>
         <div class="demonstration__slider" role="slider" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" aria-labelledby="slider-label"></div>
         <span class="visually-hidden" id="slider-label">Сравнение фотографий</span>
@@ -129,9 +154,16 @@
       </iframe>
       <div class="footer__map-fallback">
         <picture>
-          <source width="1440" height="400" type="image/png" media="(min-width: 1440px)" srcset="./images/map-index-desktop@1x.jpg 1x, ./images/map-index-desktop@2x.jpg 2x">
-          <source width="768" height="400" type="image/png" media="(min-width: 768px)" srcset="./images/map-index-tablet@1x.jpg 1x, ./images/map-index-tablet@2x.jpg 2x">
-          <img class="footer__map-fallback-image" src="./images/location-background-mobile@1x.png" srcset="./images/location-background-mobile@2x.png 2x" width="320" height="362" alt="Карта расположения офиса">
+          <source media="(min-width: 1440px)" type="image/webp" srcset="./images/map-index-desktop@1x.webp 1x, ./images/map-index-desktop@2x.webp 2x">
+          <source media="(min-width: 1440px)" type="image/jpg" srcset="./images/map-index-desktop@1x.jpg 1x, ./images/map-index-desktop@2x.jpg 2x">
+
+          <source media="(min-width: 768px)" type="image/webp" srcset="./images/map-index-tablet@1x.webp 1x, ./images/map-index-tablet@2x.webp 2x">
+          <source media="(min-width: 768px)" type="image/jpg" srcset="./images/map-index-tablet@1x.jpg 1x, ./images/map-index-tablet@2x.jpg 2x">
+
+          <source type="image/webp" srcset="./images/location-background-mobile@1x.webp 1x, ./images/location-background-mobile@2x.webp 2x">
+          <source type="image/png" srcset="./images/location-background-mobile@1x.png 1x, ./images/location-background-mobile@2x.png 2x">
+
+          <img class="footer__map-fallback-image" src="./images/location-background-mobile@1x.png" width="320" height="362" alt="Карта расположения офиса">
         </picture>
       </div>
     </div>
